--- a/infoutili.html
+++ b/infoutili.html
@@ -41,7 +41,7 @@ Guidati da istruttori esperti, impareranno a esprimere le proprie idee e emozion
             <ul>
                 <li><a href="https://www.abacatania.it/">© 2024-Accademia di Belle Arti di Catania</a></li>
                 <li><a href="https://www.instagram.com/abacatania?igsh=MTlsZXEwZmdmaGI2eQ==">Social</a></li>
-                <li><a href="https://www.instagram.com/abacatania?igsh=MTlsZXEwZmdmaGI2eQ==">Chi siamo</a></li>
+                <li><a href="">Chi siamo</a></li>
                 <li><a href="">Contatti</a></li>
             </ul>
         </nav>
